[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "fastapi-mcp>=0.3.4",
    "mcp-proxy>=0.8.0",
    "mcp[cli]>=1.9.4",
    "openai>=1.88.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
]
